<resources>
    <string name="app_name">Jappo</string>

    <string name="name">Nome e cognome</string>
    <string name="email">E-Mail</string>
    <string name="password">Password</string>

    <string name="login">Accedi</string>
    <string name="Logout">Esci</string>
    <string name="privacy">Privacy</string>
    <string name="colors">Colori</string>
    <string name="language">Lingua</string>

    <string name="register">Registrati</string>
    <string name="create_account">Non hai un account? Clicca qui.</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="password_info">La password deve essere di almeno sei caratteri con numeri, lettere e maiuscole</string>

    <string name="error_invalid_password">Password errata</string>
    <string name="error_field_required">Campo richiesto</string>
    <string name="error_invalid_email">Mail non valida</string>
    <string name="error_incorrect_password">Password sbagliata</string>
    <string name="error_invalid_name">Nome sbagliato</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Impostazioni</string>
    <string name="action_highscores">Highscores</string>

    <string name="add_element">Aggiungi elemento</string>
    <string name="edit">Modifica</string>
    <string name="add_name">Nome</string>
    <string name="add">Aggiungi</string>
    <string name="cancel">Annulla</string>
    <string name="number">Numero</string>
    <string name="insert_number">Inserire numero</string>


    <string name="select_restaurant">Seleziona ristorante</string>
    <string name="restaurants">Ristoranti</string>
    <string name="start_order">Inizia ordine</string>

    <string name="no_item_arrived">Ancora nessun elemento arrivato.</string>
    <string name="no_item_ordered">Aggiungi un prodotto all\'ordine attuale.</string>

    <string name="delete">Elimina</string>
    <string name="logout">Logout</string>
    <string name="confirm_delete">Sei sicuro di voler eliminare</string>
    <string name="confirm_logout">Sei sicuro di voler effettuare logout?</string>
    <string name="show">Visualizza</string>
    <string name="added_favorites">Aggiunto ai preferiti</string>
    <string name="from_favourites">dai preferiti?</string>
    <string name="yes">Sì</string>
    <string name="no">No</string>

    <string name="notification_title">Hai prodotti ordinati</string>
    <string name="notification_subtitle">E\' arrivato qualche prodotto?</string>

    <string name="delete_item">Elimina elemento</string>
    <string name="edit_item">Modifica elemento</string>
    <string name="mark_arrived">Segna come arrivato</string>

    <string name="delete_question">Vuoi veramente eliminare </string>
    <string name="from_current_order"> dal corrente ordine?</string>

    <string name="close_order">Chiudi ordine</string>
    <string name="close_question">Vuoi veramente chiudere l\'ordine di </string>


</resources>
