<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:background="@drawable/rounded_box"
    android:orientation="vertical">

    <ProgressBar
        android:id="@+id/register_progress"
        android:layout_weight="1"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

    <EditText
        android:hint="@string/name"
        android:layout_weight="1"
        android:textColorHint="@color/lightbrown"
        android:id="@+id/register_name_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />

    <EditText
        android:hint="@string/email"
        android:textColorHint="@color/lightbrown"
        android:id="@+id/register_mail_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:inputType="textEmailAddress" />

    <EditText
        android:hint="@string/password"
        android:textColorHint="@color/lightbrown"
        android:id="@+id/register_password_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:inputType="textPassword" />
</LinearLayout>
