<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="0dp">

    <TextView
        android:id="@+id/add_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/add_element"
        style="@style/AlertDialog.AppCompat"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/add_number_box"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp"
        android:id="@+id/add_type_box">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/completed_image"
            civ_border_color="@color/black"
            civ_border_width="2dp"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="16dp"
            android:src="@drawable/test" />
        <Spinner
            android:id="@+id/add_type_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/add_name_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/add_title"
        android:layout_marginTop="12dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/add_item_name"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:text="@string/add_name" />
        <EditText
            android:id="@+id/add_item_name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:ems="10"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/add_number_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        android:layout_below="@id/add_name_box"
        android:layout_alignParentStart="true">
        <TextView
            android:id="@+id/add_item_number"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:text="@string/number" />
        <EditText
            android:id="@+id/add_item_number_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:ems="10"
            android:inputType="number" />
    </LinearLayout>

    <View
        android:id="@+id/separator_line"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@id/add_type_box"
        android:layout_marginTop="20dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/separator_line"
        android:layout_marginTop="2dp">


        <Button
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:textColor="@color/colorAccent"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/button_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add"
            android:textColor="@color/colorAccent"
            android:background="@color/white"/>
    </LinearLayout>

</RelativeLayout>