<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="it.unibo.matteo.jappo.Fragment.NewOrderFragment"
    android:orientation="vertical">
    <TextView
        android:id="@+id/new_order_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="@string/select_restaurant"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <Spinner
        android:id="@+id/restaurant_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"

        android:layout_alignParentEnd="true"
        android:layout_below="@+id/new_order_title"
        android:layout_marginTop="17dp"
        android:layout_toEndOf="@+id/restaurant_label" />

    <TextView
        android:id="@+id/restaurant_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end|center_vertical"
        android:layout_marginStart="24dp"
        android:text="@string/restaurants"
        android:layout_alignBottom="@+id/restaurant_spinner"
        android:layout_alignTop="@+id/restaurant_spinner"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/start_order_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/rounded_button"
        android:text="@string/start_order"
        android:textColor="@color/white"
        android:layout_marginBottom="16dp"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/new_order_title"
        android:layout_alignStart="@+id/new_order_title" />

    <com.google.android.gms.maps.MapView
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/restaurant_spinner"
        android:layout_above="@id/logout_button"
        android:layout_marginBottom="8dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp" />
</RelativeLayout>
